Доработка страничек: добавлена ссылка на главную страницу, разлогинивание, русфикация страницы авторизации, проверка что пользователь залогинен при заходе на странички

--- a/templates/arhiv.html
+++ b/templates/arhiv.html
@@ -5,6 +5,9 @@
     <title>Архив задач</title>
 </head>
 <body>
-Выполенные или отменненные задачи
+Выполенные или отмененные задачи
+<br>
+<br>
+<a href="{{ url_for('show')}}">Главная</a>
 </body>
 </html>
