--- a/templates/work.html
+++ b/templates/work.html
@@ -5,6 +5,8 @@
     <title>Задачи в работе</title>
 </head>
 <body>
-Задачи взятые в работу
+Задачи взятые в работу <br>
+<br>
+<a href="{{ url_for('show')}}">Главная</a>
 </body>
 </html>
