--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,13 @@
 {% block body %}
-  <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
+  <h2>Вход в управление задачами</h2>
+  {% if error %}<p class=error><strong>Ошибка:</strong> {{ error }}{% endif %}
   <form action="{{ url_for('login') }}" method=post>
     <dl>
-      <dt>Username:
+      <dt>Пользователь:
       <dd><input type=text name=username>
-      <dt>Password:
+      <dt>Пароль:
       <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
+      <dd><input type=submit value=Войти>
     </dl>
   </form>
 {% endblock %}
