--- a/templates/open.html
+++ b/templates/open.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 Новые задачи, не взятые в работу
+<br>
+<br>
+<a href="{{ url_for('new')}}">Создать задачу</a>
+<br>
+<br>
+<a href="{{ url_for('show')}}">Главная</a>
 </body>
 </html>
