--- a/templates/open.html
+++ b/templates/open.html
@@ -11,6 +11,8 @@
 <a href="{{ url_for('new')}}">Создать задачу</a>
 <br>
 <br>
+<a href="{{ url_for('open')}}">Новые</a>
+<br>
 <a href="{{ url_for('show')}}">Главная</a>
 </body>
 </html>
