--- a/templates/show.html
+++ b/templates/show.html
@@ -5,6 +5,7 @@
     <title>Статистика по задачам</title>
 </head>
 <body>
+Статистика по задачам:
   <ul class="sidebar-nav">
      <li><a href="{{ url_for('open') }}">Новые</a></li>
      <li><a href="{{ url_for('work') }}">В работе</a></li>
