--- a/templates/show.html
+++ b/templates/show.html
@@ -6,10 +6,17 @@
 </head>
 <body>
 Статистика по задачам:
+<br>
+<br>
+Всего задач: {{ids}}
+<br>
   <ul class="sidebar-nav">
-     <li><a href="{{ url_for('open') }}">Новые</a></li>
-     <li><a href="{{ url_for('work') }}">В работе</a></li>
-     <li><a href="{{ url_for('arhiv')}}">Архив</a></li>
+     <li><a href="{{ url_for('open') }}">Новые задачи:</a>  {{ids_new}} </li>
+     <li><a href="{{ url_for('work') }}">В работе:</a>  {{ids_work}} </li>
+     <li><a href="{{ url_for('arhiv')}}">Архив:</a>  {{ids_arhiv}} </li>
+     <li>Выполнено: {{ids_complete}} </li>
+     <li>Отменено: {{ids_cancel}} </li>
+     <li>Среднее время выполнения: {{time}} дня </li>
   </ul>
 <a href="{{ url_for('logout')}}">Выход</a>
 </body>
