--- a/templates/work.html
+++ b/templates/work.html
@@ -5,8 +5,22 @@
     <title>Задачи в работе</title>
 </head>
 <body>
-Задачи взятые в работу <br>
 <br>
+<table>
+  <table border="1">
+   <caption>Задачи взятые в работу</caption>
+   <tr>
+    <th>ID</th>
+    <th>Задача</th>
+    <th>Статус</th>
+    <th>Исполнитель</th>
+   </tr>
+{% for task in tasks_open %}
+<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td> {{ task.fio }} </td>
+</tr>
+{% endfor %}
+</table>
+    <br>
 <a href="{{ url_for('show')}}">Главная</a>
 </body>
 </html>
