Доработка всех страниц и обработчиков.

--- a/templates/new.html
+++ b/templates/new.html
@@ -5,6 +5,9 @@
     <title>Создание новой задачи</title>
 </head>
 <body>
+Пользователь:  {{login}}
+<br>
+<br>
 Создание новой задачи
 <br>
     <form action="{{ url_for('new_task') }}" method=post>
