--- a/templates/arhiv.html
+++ b/templates/arhiv.html
@@ -5,6 +5,7 @@
     <title>Архив задач</title>
 </head>
 <body>
+Пользователь:  {{login}}
 <br>
 <br>
 <table>
@@ -15,9 +16,13 @@
     <th>Задача</th>
     <th>Статус</th>
     <th>Исполнитель</th>
+       <th>Создание</th>
+       <th>Взято в работу</th>
+       <th>Завершено</th>
    </tr>
 {% for task in tasks_arhiv %}
 <tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td> {{ task.fio }} </td>
+    <td>{{ task.create }} </td> <td>{{ task.work }} </td> <td>{{ task.complete }} </td>
 </tr>
 {% endfor %}
 </table>
