--- a/templates/open.html
+++ b/templates/open.html
@@ -19,7 +19,7 @@
        <th>Взять в работу</th>
    </tr>
 {% for task in tasks_open %}
-<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td>{{ task.create }} </td>
+<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td>{{ task.create.strftime('%d.%m.%Y %H:%M') }} </td>
     <td>
      <form action="/in_work" method="post">
      <button name="in_work" type="submit" value={{ task.id }}>В работу</button>
