--- a/templates/work.html
+++ b/templates/work.html
@@ -24,7 +24,7 @@
    </tr>
 {% for task in tasks_work %}
 <tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td>
-    <td> {{ task.fio }} </td> <td>{{ task.create }} </td> <td>{{ task.work }} </td>
+    <td> {{ task.fio }} </td> <td>{{ task.create.strftime('%d.%m.%Y %H:%M') }} </td> <td>{{ task.work.strftime('%d.%m.%Y %H:%M') }} </td>
 
 <td>
      {% if login== task.fio  %}
