--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,6 @@
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<body>
 {% block body %}
   <h2>Вход в управление задачами</h2>
   {% if error %}<p class=error><strong>Ошибка:</strong> {{ error }}{% endif %}
@@ -11,3 +14,5 @@
     </dl>
   </form>
 {% endblock %}
+</body>
+</html>
