--- a/templates/work.html
+++ b/templates/work.html
@@ -16,6 +16,7 @@
     <th>ID</th>
     <th>Задача</th>
     <th>Статус</th>
+    <th>Решение</th>
     <th>Исполнитель</th>
        <th>Создание</th>
        <th>Взято в работу</th>
@@ -24,7 +25,7 @@
 
    </tr>
 {% for task in tasks_work %}
-<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td>
+<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td> {{ task.work }} </td>
     <td> {{ task.fio }} </td> <td>{{ task.create.strftime('%d.%m.%Y %H:%M') }} </td> <td>{{ task.work.strftime('%d.%m.%Y %H:%M') }} </td>
 
 <td>
