--- a/templates/arhiv.html
+++ b/templates/arhiv.html
@@ -22,7 +22,7 @@
        <th>Завершено</th>
    </tr>
 {% for task in tasks_arhiv %}
-<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td> {{ task.work }} </td>
+<tr> <td>{{ task.id }} </td> <td> {{ task.task }} </td> <td> {{ task.status }} </td> <td> {{ task.done }} </td>
      <td> {{ task.fio }} </td> <td>{{ task.create.strftime('%d.%m.%Y %H:%M') }} </td>
     <td>{{ task.work.strftime('%d.%m.%Y %H:%M') }} </td> <td>{{ task.complete.strftime('%d.%m.%Y %H:%M') }} </td>
 </tr>
