Изменение алгоритма работы

--- a/templates/new.html
+++ b/templates/new.html
@@ -19,7 +19,7 @@
       </dl>
     </form>
 <br>
-<a href="{{ url_for('open')}}">Новые</a>
+<a href="{{ url_for('open')}}">Новые задачи</a>
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
 </body>
