--- a/templates/show.html
+++ b/templates/show.html
@@ -20,7 +20,7 @@
      <li><a href="{{ url_for('arhiv')}}">Архив:</a>  {{ids_arhiv}} </li>
      <li>Выполнено: {{ids_complete}} </li>
      <li>Отменено: {{ids_cancel}} </li>
-     <li>Среднее время выполнения выполненных задач: {{time}} (в минутах) </li>
+     <li>Среднее время выполнения выполненных задач: {{time}} (в часах) </li>
   </ul>
 <a href="{{ url_for('logout')}}">Выход</a>
 </body>
