--- a/templates/show.html
+++ b/templates/show.html
@@ -26,7 +26,7 @@
 Переработки:
 <br>
   <ul class="sidebar-nav">
-     <li><a href="{{ url_for('new_work') }}">Новая переработка</a> </li>
+     <li><a href="{{ url_for('new_work') }}">Создать переработку</a> </li>
       <li><a href="{{ url_for('open_work') }}">Новые переработки</a> </li>
   </ul>
 <br>
