--- a/templates/new_work.html
+++ b/templates/new_work.html
@@ -12,6 +12,8 @@
 Создание новой переработки
 <br>
     <form action="{{ url_for('new_work_task') }}" method=post>
+Месяц  <input type="month" name="month" value="2021-09"><br>
+Тест  <input type="datetime-local" name="month" value="2021-09"><br>
 ФИО  <textarea name=fio rows=1 cols=30 required></textarea><br>
 Число  <input type="number" min =0 max =31 value = 1 name =date_work><br>
 Час начала  <input type="number" min =0 max =23 value = 9 name =hour_start><br>
