--- a/templates/open_work.html
+++ b/templates/open_work.html
@@ -22,7 +22,7 @@
     <th>Взять в работу</th>
    </tr>
 {% for work in open_work %}
-<tr> <td>{{ work.id }} </td> <td> {{ work.fio }} </td>
+<tr> <td>{{ work.id }} </td> <td> {{ work.worker }} </td>
      <td>{{ work.date_start }} </td> <td> {{ work.date_stop }} </td> <td> {{ work.comment }} </td>
     <td>{{ work.status }} </td>
     <td>{{ work.create.strftime('%d.%m.%Y %H:%M') }} </td>
