--- a/templates/work_arhiv.html
+++ b/templates/work_arhiv.html
@@ -26,7 +26,7 @@
    </tr>
 
 {% for work in works_arhiv %}
-<tr> <td>{{ work.id }} </td> <td> {{ work.fio }} </td>
+<tr> <td>{{ work.id }} </td> <td> {{ work.worker }} </td>
     <td>{{ work.date_start }} </td> <td> {{ work.date_stop }} </td> <td> {{ work.comment }} </td>
    <td> {{ work.status }} </td> <td>  {{work.done}}</td>
     <td>{{ work.create.strftime('%d.%m.%Y %H:%M') }} </td>
