--- a/templates/work_work.html
+++ b/templates/work_work.html
@@ -27,7 +27,7 @@
        <th>В новые</th>
    </tr>
 {% for work in works_work %}
-<tr> <td>{{ work.id }} </td> <td> {{ work.fio }} </td>
+<tr> <td>{{ work.id }} </td> <td> {{ work.worker }} </td>
     <td>{{ work.date_start }} </td> <td> {{ work.date_stop }} </td> <td> {{ work.comment }} </td>
 
     <td> {{ work.status }} </td>
