--- a/templates/show.html
+++ b/templates/show.html
@@ -9,10 +9,7 @@
 Пользователь:  {{login}}
 <br>
 <br>
-Статистика по задачам:
-<br>
-<br>
-Всего задач: {{ids}}
+Задачи:
 <br>
   <ul class="sidebar-nav">
      <li><a href="{{ url_for('open') }}">Новые:</a>  {{ids_new}} </li>
