--- a/templates/show.html
+++ b/templates/show.html
@@ -12,11 +12,10 @@
 Задачи:
 <br>
   <ul class="sidebar-nav">
+     <li><a href="{{ url_for('new')}}">Создать задачу</a> </li>
      <li><a href="{{ url_for('open') }}">Новые:</a>  {{ids_new}} </li>
      <li><a href="{{ url_for('work') }}">В работе:</a>  {{ids_work}} </li>
-     <li><a href="{{ url_for('arhiv')}}">Архив:</a>  {{ids_arhiv}} </li>
-     <li>Выполнено: {{ids_complete}} </li>
-     <li>Отменено: {{ids_cancel}} </li>
+     <li><a href="{{ url_for('arhiv')}}">Выполнено:</a>  {{ids_complete}} </li>
   </ul>
 <br>
 Переработки: {{ids_works}}
@@ -25,7 +24,7 @@
      <li><a href="{{ url_for('new_work') }}">Создать</a> </li>
      <li><a href="{{ url_for('open_work') }}">Новые:</a> {{ids_new_works}} </li>
       <li><a href="{{ url_for('work_work') }}">В работе:</a> {{ids_work_works}} </li>
-      <li><a href="{{ url_for('work_arhiv')}}">Архив:</a>  {{ids_arhiv_works}} </li>
+      <li><a href="{{ url_for('work_arhiv')}}">Выполнено:</a>  {{ids_work_complete}} </li>
   </ul>
 <br>
 
