--- a/templates/show.html
+++ b/templates/show.html
@@ -12,12 +12,12 @@
 Задачи:
 <br>
   <ul class="sidebar-nav">
-     <li><a href="{{ url_for('new')}}">Создать задачу</a> </li>
+     <li><a href="{{ url_for('new')}}">Создать</a> </li>
      <li><a href="{{ url_for('open') }}">Новые:</a>  {{ids_new}} </li>
      <li><a href="{{ url_for('work') }}">В работе:</a>  {{ids_work}} </li>
      <li><a href="{{ url_for('arhiv')}}">Выполнено:</a>  {{ids_complete}} </li>
   </ul>
-<br>
+
 Переработки: {{ids_works}}
 <br>
   <ul class="sidebar-nav">
