--- a/templates/new.html
+++ b/templates/new.html
@@ -12,13 +12,12 @@
 Создание новой задачи
 <br>
     <form action="{{ url_for('new_task') }}" method=post>
-      <dl>
-        <dt>Введите описание задачи:
-          <dd></dd>
-          <dd><textarea name=task_text rows=7 cols=33 required></textarea>
-          <dd></dd>
-        <dd><input type=submit value=Создать>
-      </dl>
+
+        Введите описание задачи:
+          <br>
+          <textarea name=task_text rows=7 cols=33 required></textarea>
+          <br>
+        <input type=submit value=Создать>
     </form>
 <br>
 <a href="{{ url_for('open')}}">Новые задачи</a>
