--- a/templates/new_work.html
+++ b/templates/new_work.html
@@ -16,7 +16,7 @@
 ФИО  <textarea name=worker rows=1 cols=30 required></textarea>
 <br>
 <br>
-Начало  <input id="start" type="datetime-local" name="date_start" value="2021-12-01T09:00" onchange = stopstart()><br> <br>
+Начало  <input id="start" type="datetime-local" name="date_start" value="2021-12-01T09:00" onchange = "stopstart()"><br> <br>
 Завершение  <input id="stop" type="datetime-local" name="date_stop" value="2021-12-01T18:00"><br> <br>
 Описание <br> <br>
     <textarea name=comment rows=5 cols=40 required></textarea><br>
