--- a/templates/login.html
+++ b/templates/login.html
@@ -5,13 +5,21 @@
   <h3>Вход в управление</h3>
   {% if error %}<p class=error><strong>Ошибка:</strong> {{ error }}{% endif %}
   <form action="{{ url_for('login') }}" method=post>
-    <dl>
-      <dt>Пользователь:
-      <dd><input type=text name=username>
-      <dt>Пароль:
-      <dd><input type=password name=password>
-      <dd><input type=submit value=Войти>
-    </dl>
+  <br>
+  <br>
+  Пользователь:
+  <br>
+  <br>
+  <input type=text name=username>
+  <br>
+  <br>
+  Пароль:
+  <br>
+  <br>
+  <input type=password name=password>
+  <br>
+  <br>
+  <input type=submit value=Войти>
   </form>
 {% endblock %}
 </body>
