--- a/templates/new_work.html
+++ b/templates/new_work.html
@@ -13,7 +13,7 @@
 <br>
 <br>
 <form action="{{ url_for('new_work_task') }}" method=post>
-ФИО  <input type="text" list="sotr" name=worker required maxlength="4" />
+ФИО  <input type="text" list="sotr" name=worker required/>
 <datalist id="sotr">
     {% for work in open_work %}
   <option>{{work.worker}}</option>
