Work_arhiv + month

--- a/templates/work_arhiv.html
+++ b/templates/work_arhiv.html
@@ -10,7 +10,7 @@
 <br>
 <table>
   <table border="1">
-   <caption>Выполенные или отмененные переработки</caption>
+   <caption>Выполненные или отмененные переработки</caption>
    <tr>
      <th>ID</th>
     <th>ФИО</th>
