Work_arhiv + month

--- a/templates/show.html
+++ b/templates/show.html
@@ -25,6 +25,7 @@
      <li><a href="{{ url_for('open_work') }}">Новые:</a> {{ids_new_works}} </li>
       <li><a href="{{ url_for('work_work') }}">В работе:</a> {{ids_work_works}} </li>
       <li><a href="{{ url_for('work_arhiv')}}">Выполнено:</a>  {{ids_work_complete}} </li>
+      <li><a href="{{ url_for('work_arhiv_prev')}}">Выполнено в прошлом месяце: </a>  {{ids_work_complete}} </li>
   </ul>
 <br>
 
