Work_arhiv + month

--- a/templates/show.html
+++ b/templates/show.html
@@ -24,8 +24,8 @@
      <li><a href="{{ url_for('new_work') }}">Создать</a> </li>
      <li><a href="{{ url_for('open_work') }}">Новые:</a> {{ids_new_works}} </li>
       <li><a href="{{ url_for('work_work') }}">В работе:</a> {{ids_work_works}} </li>
-      <li><a href="{{ url_for('work_arhiv')}}">Выполнено тек:</a>   </li>
-      <li><a href="{{ url_for('work_arhiv_prev')}}">Выполнено пр:</a>   </li>
+      <li><a href="{{ url_for('work_arhiv')}}">Выполнено в этом месяце</a>   </li>
+      <li><a href="{{ url_for('work_arhiv_prev')}}">Выполнено в прошлом месяце</a>   </li>
   </ul>
 <br>
 
