--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -18,7 +18,15 @@
     <th>ID</th>
    </tr>
 {% for user in show_users_var %}
-<tr> <td>{{ user.login }} </td> <td> {{ user.password }} </td> <td> {{ user.id }} </td>
+<tr>
+    <td>{{ user.login }} </td>
+    <td> {{ user.password }} </td>
+    <td>
+        <form action="/update_user_id" method=post>
+        <textarea name=user_id rows=1 cols=9 required>{{ user.id }}</textarea>
+        <button name="update_user_id" type="submit" value={{ work.id }}>Сохранить</button>
+        </form>
+     </td>
 </tr>
 {% endfor %}
 </table>
