+ update_user_id

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -24,7 +24,7 @@
     <td>
         <form action="/update_user_id" method=post>
         <textarea name=user_id rows=1 cols=9 required>{{ user.id }}</textarea>
-        <button name="update_user_id" type="submit" value={{ work.id }}>Сохранить</button>
+        <button name="update_user_id" type="submit" value={{ user.login }}>Сохранить</button>
         </form>
      </td>
 </tr>
