--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -23,7 +23,7 @@
     <td> {{ user.password }} </td>
     <td>
         <form action="/update_user_id" method=post>
-        <textarea name=user_id rows=1 cols=9 required>{{ user.id }}</textarea>
+        <input type="text" name=user_id>{{ user.id }}</input>
         <button name="update_user_id" type="submit" value={{ user.login }}>Сохранить</button>
         </form>
      </td>
