--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -24,7 +24,7 @@
     <td>
         <form action="/update_user_id" method=post>
         <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}">
-        <button name="update_user_id" type="submit" value={{ user.login }}>Сохранить</button>
+        <button name="update_user_id" type="submit" value={{ user.login }}>Ок</button>
         </form>
      </td>
 </tr>
