--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -19,14 +19,12 @@
    </tr>
 {% for user in show_users_var %}
 <tr>
+    <form action="/update_user_id" method=post>
     <td>{{ user.login }} </td>
     <td> {{ user.password }} </td>
-    <td>
-        <form action="/update_user_id" method=post>
-        <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}">
-        <button name="update_user_id" type="submit" value={{ user.login }}>Ок</button>
-        </form>
-     </td>
+        <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
+    <td> <button name="update_user_id" type="submit" value={{ user.login }}>Ок</button> </td>
+    </form>
 </tr>
 {% endfor %}
 </table>
