--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -16,13 +16,14 @@
     <th>ФИО</th>
     <th>Пароль</th>
     <th>ID</th>
+    <th>Сохранить</th>
    </tr>
 {% for user in show_users_var %}
 <tr>
     <form action="/update_user_id" method=post>
     <td>{{ user.login }} </td>
     <td> {{ user.password }} </td>
-        <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
+    <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
     <td> <button name="update_user_id" type="submit" value={{ user.login }}>Ок</button> </td>
     </form>
 </tr>
@@ -30,5 +31,7 @@
 </table>
     <br>
 <a href="{{ url_for('show')}}">Главная</a>
+<br>
+    Версия 1
 </body>
 </html>
