--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -19,16 +19,16 @@
    </tr>
 {% for user in show_users_var %}
 <tr>
-    <form action="/update_user_id" method=post>
+    <form action="/update_user" method=post>
     <td>{{ user.login }} </td>
-    <td> {{ user.password }} </td>
+    <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}"> </td>
     <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
-    <td> <button name="update_user_id" type="submit" value={{ user.login }}>Ок</button> </td>
+    <td> <button name="update_user" type="submit" value={{ user.login }}>Ок</button> </td>
     </form>
 </tr>
 {% endfor %}
 </table>
-    <br>
+<br>
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
 <br>
