+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -9,7 +9,7 @@
 Пользователь:  {{login}}
 <br>
 <br>
-<br>
+<table>
 <table border="1">
    <caption>Пользователи</caption>
    <tr>
@@ -33,6 +33,6 @@
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
 <br>
-Версия 8
+Версия 9
 </body>
 </html>
