+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -18,15 +18,21 @@
     <th>Сохранить</th>
    </tr>
 {% for user in show_users_var %}
-<tr>
+    <form action="/update_user" method=post>
+        <tr>
+    <td> {{ user.login }} </td>
+    <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}"> </td>
+    <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
+    <td> <button name="update_user" type="submit" value={{ user.login }}>Ок</button> </td>
+        </tr>
+    </form>
 
-</tr>
 {% endfor %}
 </table>
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
 <br>
-Версия 11
+Версия 12
 </body>
 </html>
