+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -18,21 +18,19 @@
     <th>Сохранить</th>
    </tr>
 {% for user in show_users_var %}
-    <form action="/update_user" method=post>
+    <form id="update" action="/update_user" method=post> </form>
         <tr>
     <td> {{ user.login }} </td>
-    <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}"> </td>
-    <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
-    <td> <button name="update_user" type="submit" value={{ user.login }}>Ок</button> </td>
+    <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}" form="update"> </td>
+    <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}" form="update"> </td>>
+    <td> <button name="update_user" type="submit" value={{ user.login }} form="update">Ок</button> </td>
         </tr>
-    </form>
-
 {% endfor %}
 </table>
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
 <br>
-Версия 12
+Версия 13
 </body>
 </html>
