+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -9,24 +9,22 @@
 Пользователь:  {{login}}
 <br>
 <br>
+<form action="/update_user" method=post id="update"> </form>
 <table border="1">
 <caption>Пользователи</caption>
    <tr>
     <th>ФИО</th>
     <th>Пароль</th>
     <th>ID</th>
-    <th>Сохранить</th>
+    <th></th>
    </tr>
 {% for user in show_users_var %}
-    <form action="/update_user" method=post>
         <tr>
     <td> {{ user.login }} </td>
-    <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}"> </td>
-    <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}"> </td>>
-    <td> <button name="update_user" type="submit" value={{ user.login }}>Ок</button> </td>
+    <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}" form="update"> </td>
+    <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}" form="update"> </td>>
+    <td> <input type="submit" name="update_user" value={{ user.login }} form="update"> </td>
         </tr>
-    </form>
-
 {% endfor %}
 </table>
 <br>
