+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -23,7 +23,7 @@
     <td> {{ user.login }} </td>
     <td> <input type="text" maxlength="16" name=user_password size="16" value="{{ user.password }}" form="update"/> </td>
     <td> <input type="text" maxlength="9" name=user_id size="9" value="{{ user.id }}" form="update"/> </td>>
-    <td> <button name="update_user" type="submit" value={{ user.login }}>Ок</button> </td>
+    <td> <button name="update_user" type="submit" value={{ user.login }} form="update">Ок</button> </td>
         </tr>
 {% endfor %}
 </table>
