+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -9,7 +9,7 @@
 Пользователь:  {{login}}
 <br>
 <br>
-<form action="/update_user" method=post id="update"> </form>
+<form action="/update_user" method="post" id="update"> </form>
 <table border="1">
 <caption>Пользователи</caption>
    <tr>
@@ -30,7 +30,7 @@
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
-.
+..
 <br>
 </body>
 </html>
