--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -20,7 +20,7 @@
    </tr>
 {% for user in show_users_var %}
         <tr>
-    <td> <input type="text" name="update_user" value={{ user.login }} form="update" readonly> </td>
+    <td> <input type="text" name="update_user" value="{{ user.login }}" form="update" readonly> </td>
     <td> <input type="text" maxlength="16" name=user_password value="{{ user.password }}" form="update"> </td>
     <td> <input type="text" maxlength="9" name=user_id  value="{{ user.id }}" form="update"> </td>>
     <td> <input type="submit" value="Ok" form="update"> </td>>
