--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <head>
     <meta charset="UTF-8">
@@ -10,7 +9,7 @@
 <br>
 <br>
 <table border="1">
-<caption>Пользователи</caption>
+    <caption>Пользователи</caption>
    <tr>
     <th>ФИО</th>
     <th>Пароль</th>
